# contsub

./: .gitignore  Contsub.py  Cubes.py  README.md  pyproject.toml
.github/workflows/: python-poetry-package.yml  python-publish.yml
contsub/: Contsub.py  Cubes.py  cubes.py  image_plane.py  imcontsub.py  masking.py  utils.py
contsub/parser/: dimcontsub.py  imcontsub.py  imcontsub.yaml
tests/: example.py  test_main.py
