[tool.poetry]
name = "contsub"
version = "0.1.2"
description = "Radio astronomy data continuum subtraction tools"
authors = ["Amir Kazemi-Moridani, Sphesihle Makhathini, Mika Naidoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.22.4"
astropy = "^6.0.0"
scipy = "^1.12.0"
xarray-fits = "*"
stimela = {git = "https://github.com/caracal-pipeline/stimela.git", branch="master"}

[tool.poetry.scripts]
imcontsub = "contsub.parser.imcontsub:runit"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
